# DRAGONS

./: .coveragerc  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .project  .pylintrc  .readthedocs.yaml  .travis.yml  Changes.md  Copyright  INSTALL  Jenkinsfile  LICENSE  MANIFEST.in  README  README.md  appveyor.yml  astrodata.py  cheat-sheet.md  code_of_conduct.md  codecov.yml  conftest.py  contributing.rst  generic.py  noxfile.py  ops_versions.txt  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.cfg  setup.py  tempREADME.md  test.kl  test_data  tox.ini  versions.txt
.circleci/: config.yml
.github/: codecov.yml  dependabot.yml
.jenkins/: GeminiCalMgr-0.9.11-py3-none-any.whl  Jenkinsfile_conda  Jenkinsfile_py2_stable  build_and_test_venv.sh  conda_env_stable.yml  conda_py2env_stable.yml  conda_py3env_stable.yml  conda_test_environment.yml  conda_venv.yml  download_and_install_anaconda.sh  download_test_data.py  download_test_data.sh  dragons_ideas.txt  dragons_new_architecture.txt  test_env_and_install_missing_libs.sh  test_files.txt
GeminiDR/: README
IQTool/: __init__.py  iqtool.py  pygem  setup.py
NICI/: c_correlate.py  congrid.py  dist_circle.py  nici.cl  niciCntrd.py  niciTools.py  nici_das  nici_das.py  nici_pyraf.py  nicimkflats  nicimkflats.py  nicimkflats_iraf.py  niciprepare  niciprepare.py  niciprepare_iraf.py  niciscience  niciscience.py  niciscience_iraf.py  peak2halo.py  robustsigma.py  setup.py
RECIPES_Gemini/: MANIFEST.in  __init__.py  recipe.TEST.py  recipe.bookkeeping  recipe.calRequests  recipe.callen  recipe.demo  recipe.demo2  recipe.measure  recipe.prepare2  recipe.qaReduce.GMOS_FLAT_RAW  recipe.qaReduce.GMOS_FLUX_RAW  recipe.qaReduce.GMOS_IMAGE  recipe.testDisplay  recipe.test_one  recipe.test_one.GEMINI_SOUTH  recipe.test_two  recipeIndex.TEST.py  setup.py
adutils/: filesystem.py  gemutil.py  importutil.py  irafutil.py
astrodata/: .readthedocs.yaml  AstroData.py  AstroDataType.py  Calculator.py  CalibrationDefinitionLibrary.py  CalibrationRequestEvent.py  ConfigSpace.py  DataSpider.py  DescriptorUnits.py  Descriptors.py  Errors.py  ExtTable.py  FitsStorageFeatures.py  GeminiData.py  GeminiDataType.py  IDFactory.py  LocalCalibrationService.py  Lookups.py  ParamObject.py  PrimInspect.py  Proxies.py  README  RecipeManager.py  ReductionContextRecord.py  ReductionContextRecords.py  ReductionObjectEvent.py  ReductionObjectRequests.py  ReductionObjects.py  Requirements.py  StackKeeper.py  StackableEvents.py  Structures.py  __init__.py  _version.py  adinspect.py  cache_files.py  conftest.py  core.py  data.py  datatypes.py  (+30 more)
astrodata_FITS/: Copyright  MANIFEST.in  setup.py
astrodata_Gemini/: INSTALL  MANIFEST.in  README  setup.py
astrodata_Gemini_importable/: MANIFEST.in  setup.py
astrodata_tests/: test_object_construction.py  test_provenance.py  test_testing.py  test_utils.py
doc/: Makefile  NOTES  conf.py  index.rst  requirements.txt
docs/: GeminiDR_Package.pptx  GeminiDR_Package2.pptx  IGRINSDR_users_manual.ipynb  IGRINSDR_users_manual.rst  INSTALL.md  RecipeSystem2.pptx  conf.py  igrins.mef_extract.rst  igrins.recipes.sq.recipes_BUNDLE.rst  igrins.rst  index.rst  recipe_flat.rst
extern_licenses/: jqplot_excanvas  jqplot_natural_docs  jquery  jquery.color  pex_config
fitsstore/: CALLEN-FitsStorageConfig.py  CadcCRC.py  CadcWMD.py  FSsvnver.ver  FitsStorage.py  FitsStorageCal.py  FitsStorageConfig.py  FitsStorageCuration.py  FitsStorageLogger.py  FitsStorageTape.py  FitsStorageUtils.py  FitsStorageWebSummary.py  FitsVerify.py  TODO  (+34 more)
(+5593 files in other folders)
