[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = astrodata recipe_system gemini_instruments geminidr/core geminidr/f2 geminidr/gmos geminidr/gsaoi gempy
#addopts = --pyargs --doctest-modules --ignore-glob=*conf.py
addopts = --pyargs
markers =
    dragons_remote_data : Tests that download data from the archive.
    gmosls : GMOS Long-slit Tests
    gsaoi : GSAOI tests
    integration_test : Long tests using Reduce(...)
    preprocessed_data : Tests that require preprocessed data
    regression : Tests that will compare output data with reference data.
    slow : Slow tests
filterwarnings =
    ignore:The timefunc function is deprecated
    ignore:This emulation is deprecated, use 'importlib' instead:DeprecationWarning

[pydocstyle]
convention=numpy

[tool.isort]
default_section = THIRDPARTY
known_first_party = astrodata,geminidr,gemini_instruments,gempy,recipe_system
multi_line_output = 0
balanced_wrapping = true
include_trailing_comma = false
