[metadata]
license_files = LICENSE

[tool:pytest]
addopts = --pyargs
markers =
    dragons_remote_data : Tests that download data from the archive.
    gmosls : GMOS Long-slit Tests
    gsaoi : GSAOI tests
    interactive : Tests for primitives that run interactively. Should run only locally.
    integration_test : Long tests using Reduce(...)
    preprocessed_data : Tests that require preprocessed data
    regression : Tests that will compare output data with reference data.
    slow : Slow tests
    ghostbundle : GHOST tests on bundles
    ghostslit : GHOST tests on SVC frames
    ghostspect : GHOST tests on echellogram frames
filterwarnings =
    ignore:The timefunc function is deprecated
    ignore:This emulation is deprecated, use 'importlib' instead:DeprecationWarning
norecursedirs =
    old_astrodata_Gemini/*
    old_other
    out_unit

[pydocstyle]
convention=numpy

[tool.isort]
default_section = THIRDPARTY
known_first_party = astrodata,geminidr,gemini_instruments,gempy,recipe_system
multi_line_output = 0
balanced_wrapping = true
include_trailing_comma = false
